[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neste-index"
version = "0.1.0"
description = "Build a per-page text index from PDF files."
requires-python = ">=3.9"
dependencies = ["pypdf>=6.0"]

[project.scripts]
neste-index = "build_index:main"

[tool.setuptools]
py-modules = ["build_index"]
